--- a/src/scss/Tooltip.scss
+++ b/src/scss/Tooltip.scss
@@ -11,7 +11,7 @@
     color: #FFF;
     text-align: center;
     font-size: 0.7rem;
-    padding: 3px;
+    padding: 2.5px 5px;
     border-radius: 20px;
     top: -10%;
     left: 50%;
